--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  font-family: "Ubuntu", sans-serif;
+  font: normal 100%/1.5 sans-serif;
 }
 
 *, *::before, *::after {
@@ -22,22 +22,33 @@ body {
 }
 
 header {
-  background-color: #18294f
+  background-color: #18294f;
+  color: #fff;
+  font-family: Ubuntu, sans-serif;
 }
 
 header h1 {
   color: #fff;
   font-size: 2rem;
+  margin: 0;
 }
 
-header li a {
+nav a {
   color: #6c8fe0;
   text-decoration: none;
   font-size: 1.125rem;
+  white-space: nowrap;
 }
 
-header nav ul{
+nav a:hover {
+  background-color: #6c8fe0;
+  color: #fff;
+}
+
+nav ul {
   list-style-type: none;
+  padding: 0;
+  font-size: 1.125rem;
 }
 
 @media only screen and (min-width: 20em) {
@@ -45,6 +56,21 @@ header nav ul{
   html {
     font-size: 100%;
     line-height: 1.3;
+  }
+
+  h1 {
+    padding: .5em;
+    text-align: center;
+  }
+
+  a {
+    padding: 5px;
+    margin-bottom: .9rem;
+  }
+
+  li {
+    padding-left: .3em;
+    margin-bottom: .9rem;
   }
 }
 
@@ -54,6 +80,17 @@ header nav ul{
     font-size: 100%;
     line-height: 1.3;
   }
+
+  li {
+    display: inline-block;
+    width: 49%;
+    padding: 0;
+    text-align: center;
+  }
+
+  a {
+    padding: 0;
+  }
 }
 
 @media only screen and (min-width: 38em) {
@@ -61,6 +98,17 @@ header nav ul{
   html {
     font-size: 110%;
     line-height: 1.4;
+  }
+
+  h1 {
+    padding-bottom: .3rem;
+  }
+
+  li {
+    display: inline-block;
+    width: 24%;
+    padding: 0;
+    text-align: center;
   }
 }
 
@@ -70,17 +118,27 @@ header nav ul{
     font-size: 120%;
     line-height: 1.5;
   }
+
+  h1 {
+    width: 50%;
+    padding: 0;
+    display: inline-block;
+    float: left;
+  }
+
+  header h1 {
+    margin-top: 1.5rem;
+  }
+
+  nav {
+    display: inline-block;
+    width: 49%;
+  }
 }
 
 @media only screen and (min-width: 90em) {
 
-    html {
-      font-size: 130%;
-    }
+  html {
+    font-size: 130%;
+  }
 }
-
-  Typefaces: Ubuntu
-  Text sizes: 2rem, 1.125rem
-  Colours: #fff, #18294f, #6c8fe0
-  Paddings: 5px, .3em 0 .5em, .5em .75em, .75rem
-  Margins: .9rem
